--- a/appState.json
+++ b/appState.json
@@ -10,8 +10,7 @@
         "children": [
           "73276026-5153-45c5-b4c5-90ce8e4af0bd",
           "b241171a-b4bb-4ced-bf61-e11f0fe47e4f",
-          "f0a2b39b-599d-4e3d-901c-6a5b274de84c",
-          "088081c0-9f52-4760-952f-0115586007e2"
+          "f0a2b39b-599d-4e3d-901c-6a5b274de84c"
         ],
         "isRemovable": false,
         "filePath": "MoveTest123"
@@ -41,7 +40,9 @@
         "name": "sub1",
         "type": "DIRECTORY",
         "isDirectory": true,
-        "children": [],
+        "children": [
+          "088081c0-9f52-4760-952f-0115586007e2"
+        ],
         "isRemovable": true,
         "filePath": "MoveTest123/sub1"
       },
@@ -71,13 +72,13 @@
       },
       "088081c0-9f52-4760-952f-0115586007e2": {
         "id": "088081c0-9f52-4760-952f-0115586007e2",
-        "parent": "25219970-b7a0-4692-a692-9477d80fe484",
+        "parent": "b241171a-b4bb-4ced-bf61-e11f0fe47e4f",
         "name": "data.json",
         "type": "JSON_FILE",
         "isDirectory": false,
         "children": [],
         "isRemovable": true,
-        "filePath": "MoveTest123/data.json",
+        "filePath": "MoveTest123/sub1/data.json",
         "code": "[\n    {\"name\": \"mike\"}\n]"
       },
       "54a74332-025a-4d4c-9693-0590d171cb5f": {
@@ -105,8 +106,7 @@
       }
     },
     "deletedFiles": [
-      "MoveTest123/data-1.json",
-      "MoveTest123/hello3.xml"
+      "MoveTest123/data.json"
     ],
     "rootNode": "25219970-b7a0-4692-a692-9477d80fe484",
     "openFiles": [
@@ -142,7 +142,7 @@
     "projectRegion": "us-east-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1553767573601
+    "lastSave": 1553767637977
   },
   "VCS_STATE": {
     "provider": "GitHub",
